--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
 </h1>
 </header>
 <nav>
+ <a href='index.html'>Главная</a> 
 <a href='index1.html'>Снюсоеды</a> 
 <a href='index2.html'>Анонимусы</a>  
 </nav>
